# reqstool-python-decorators

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml  check-semantic-pr.yml  lint.yml  publish_pypi_prod.yml  publish_pypi_test.yml
docs/: antora-playbook.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc  installation.adoc  usage.adoc
src/reqstool_python_decorators/decorators/: __init__.py  decorators.py
src/reqstool_python_decorators/processors/: decorator_processor.py
tests/resources/test_decorators/: requirements_decorators.py  svc_decorators.py
tests/unit/reqstool_decorators/: test_decorators.py
tests/unit/reqstool_decorators/processors/: test_processors.py
